--- a/rush/yjullapo.css
+++ b/rush/yjullapo.css
@@ -201,6 +201,121 @@ nav::after {
 }
 
 
+@media screen and (max-width: 1200px) {
+    .nav-con {
+        height: 50px;
+    }
+
+    .menu li {
+        margin-left: 0.5rem;
+        padding: 8px;
+    }
+
+    .logo {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-con {
+        flex-direction: column;
+        height: auto;
+        padding: 1rem 0;
+    }
+
+    .menu {
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    .menu li {
+        padding: 1rem;
+        margin-left: 0;
+    }
+
+    .circleimg {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .aboutinfo h2,
+    .aboutinfo h4,
+    .aboutinfo p {
+        font-size: 2rem;
+    }
+
+    .skill-container h2 {
+        font-size: 2.5rem;
+    }
+
+    #skill img {
+        height: 150px;
+        width: 150px;
+    }
+
+    .contactinfo {
+        flex-direction: column;
+    }
+
+    .social {
+        gap: 50px;
+        bottom: 10%;
+    }
+
+    .social img {
+        max-width: 80px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .logo {
+        font-size: 1rem;
+    }
+
+    .nav-con {
+        padding: 1rem 0;
+    }
+
+    .menu li {
+        padding: 0.5rem;
+    }
+
+    .circleimg {
+        width: 300px;
+        height: 300px;
+    }
+
+    .aboutinfo h2,
+    .aboutinfo h4,
+    .aboutinfo p {
+        font-size: 1.2rem;
+    }
+
+    .skill-container h2 {
+        font-size: 2rem;
+    }
+
+    #skill img {
+        height: 100px;
+        width: 100px;
+    }
+
+    .contactinfo {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .social {
+        gap: 30px;
+        bottom: 5%;
+    }
+
+    .social img {
+        max-width: 60px;
+    }
+}
+
 @media screen and (max-width: 360px) {
     .logo {
         margin-bottom: 1.5rem;
@@ -222,11 +337,5 @@ nav::after {
     .menu li {
         padding: 1rem 0;
         margin-left: 0;
-        transition: 0.5s;
     }
-
-    .menu li:hover {
-        background-color: #E0D9CE;
-    }
-
 }
